// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Backdrop  props.function  UU5.Bricks.Backdrop - onClick() 1`] = `
<Backdrop
  background={false}
  className={null}
  controlled={true}
  disabled={false}
  hidden={false}
  id="idBackDrop"
  mainAttrs={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClick={[Function]}
  onMouseOver={[Function]}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Backdrop  props.function  UU5.Bricks.Backdrop - onClick() 2`] = `
<Backdrop
  background={false}
  className={null}
  controlled={true}
  disabled={false}
  hidden={false}
  id="idBackDrop"
  mainAttrs={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClick={[Function]}
  onMouseOver={[Function]}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Backdrop  props.function  UU5.Bricks.Backdrop - onMouseOver() 1`] = `
<Backdrop
  background={false}
  className={null}
  controlled={true}
  disabled={false}
  hidden={false}
  id="idBackDrop"
  mainAttrs={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClick={[Function]}
  onMouseOver={[Function]}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Backdrop  props.function  UU5.Bricks.Backdrop - onMouseOver() 2`] = `
<Backdrop
  background={false}
  className={null}
  controlled={true}
  disabled={false}
  hidden={false}
  id="idBackDrop"
  mainAttrs={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  onClick={[Function]}
  onMouseOver={[Function]}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Backdrop background 1`] = `
<div
  className="uu5-bricks-backdrop uu5-bricks-backdrop-background"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop background 2`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop background 3`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop background 4`] = `
<div
  className="uu5-bricks-backdrop uu5-bricks-backdrop-background"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop className 1`] = `
<div
  className="uu5-bricks-backdrop my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop controlled 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop controlled 2`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop controlled 3`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop controlled 4`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop default props 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop disabled 1`] = `
<div
  className="uu5-bricks-backdrop uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Backdrop disabled 2`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop disabled 3`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop disabled 4`] = `
<div
  className="uu5-bricks-backdrop uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Backdrop hidden 1`] = `
<div
  className="uu5-bricks-backdrop uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop hidden 2`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop hidden 3`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop hidden 4`] = `
<div
  className="uu5-bricks-backdrop uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop id 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop mainAttrs 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop name 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 2`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 3`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 4`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 5`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 6`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 7`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 8`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 9`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 10`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 11`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 12`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 13`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 14`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 15`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 16`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 17`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 18`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Backdrop nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Backdrop noIndex 1`] = `
<div
  className="uu5-bricks-backdrop uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop noIndex 2`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop noIndex 3`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop noIndex 4`] = `
<div
  className="uu5-bricks-backdrop uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop pureRender 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop pureRender 2`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop pureRender 3`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop pureRender 4`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop selected 1`] = `
<div
  className="uu5-bricks-backdrop uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop selected 2`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop selected 3`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop selected 4`] = `
<div
  className="uu5-bricks-backdrop uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop style 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop style 2`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop style 3`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop style 4`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop tooltip 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
